# random-number-udp

./: CMakeLists.txt  CMakeUserPresets.json  README.md  build.ps1  build.sh  conanfile.py  install_prerequisites.ps1  install_prerequisites.sh  presets.json  run_client.ps1  run_client.sh  run_server.ps1  run_server.sh
config/: client.json  server.json
include/: constants.hpp  formatters.hpp
include/client/: config.hpp  options.hpp
include/proto/: protocol.proto
include/server/: config.hpp
include/utils/: checksum.hpp  formatters.hpp  logger.hpp  options.hpp
profiles/linux/: clang-x86_64-debug  clang-x86_64-release  gcc-x86_64-debug  gcc-x86_64-release
profiles/mac/: clang-x86_64-debug  clang-x86_64-release
src/client/: config.cpp  main.cpp  options.cpp
src/server/: config.cpp  main.cpp
src/utils/: options.cpp
